Fixed sizing bug

--- a/css/custom.css
+++ b/css/custom.css
@@ -13,16 +13,18 @@
 
 #about img {
     width: 357px;
-    height: 357px;
+    min-height: 100px;
+    max-height: 357px;
 }
 
 #portfolio img {
     width: 1200px;
-    min-height: 200px;
+    min-height: 100px;
     max-height: 547px;
 }
 
 #customers img {
     width: 167px;
-    height: 167px;
+    min-height: 100px;
+    max-height: 167px;
 }
